exports[`Webpack loader calls through to convert function 1`] = `
Array [
  Array [
    "---
---
# Fun test times!
      ",
    Object {
      "implicitlyImportReact": true,
      "markdownItPlugins": Array [],
      "passElementProps": false,
    },
  ],
]
`;

exports[`Webpack loader passes custom options through 1`] = `
Array [
  Array [
    "---
---
# Fun test times!
      ",
    Object {
      "implicitlyImportReact": true,
      "markdownItPlugins": Array [
        [Function],
        [Function],
      ],
      "passElementProps": true,
    },
  ],
]
`;
